Added comment where to find setting for jfr