@@ -5,12 +5,18 @@ import Dependency._
 val jfrContinuous = Seq("-XX:+UnlockCommercialFeatures", "-XX:+FlightRecorder",
   "-XX:FlightRecorderOptions=defaultrecording=true,disk=true,maxage=10h,dumponexit=true,loglevel=info")
 
+// On the running machine there should be file /usr/lib/jvm/java-8-oracle/jre/lib/jfr/profile_heap_exception.jfc  with content from
+// https://pastebin.com/N3uuUfPz - it's Java Mission Control with metrics about heap allocation and details about exceptions
 val jfrWithMemAndExceptions = Seq("-XX:+UnlockCommercialFeatures", "-XX:+FlightRecorder", "-XX:+UnlockDiagnosticVMOptions",
-  "-XX:+DebugNonSafepoints", "-XX:StartFlightRecording=delay=2s,duration=60m,name=mem_ex,filename=recording.jfr,settings=profile_heap",
+  "-XX:+DebugNonSafepoints", "-XX:StartFlightRecording=delay=2s,duration=60m,name=mem_ex,filename=recording.jfr,settings=profile_heap_exception",
   "-XX:FlightRecorderOptions=disk=true,maxage=10h,dumponexit=true,loglevel=info")
 
-// initial Java heap size: 1G, maximum Java heap size: 2G
-val heapOptions = Seq("-Xms1G", "-Xmx2G")
+// initial Java heap size: 1G, maximum Java heap size: 4G
+val heapOptions = Seq("-Xms1G", "-Xmx4G")
+
+def dateFormat: String = new java.text.SimpleDateFormat("yyyy_MM_dd_hh_mm_ss").format(new java.util.Date())
+
+def logGC(project: String) = Seq("-XX:+PrintGCDetails", "-XX:+PrintGCDateStamps", s"-Xloggc:gc_${project}_$dateFormat.log")
 
 lazy val commonSettings = Seq(
   version := "0.0.1",
@@ -31,7 +37,7 @@ lazy val `akka-http` =
       commonSettings,
       libraryDependencies ++= Seq(AkkaHttp, circeForAkka, circeGeneric),
       fork in run := true,
-      javaOptions in run ++= heapOptions ++ jfrWithMemAndExceptions
+      javaOptions in run ++= heapOptions ++ logGC("akka-http") ++ jfrWithMemAndExceptions
     )
     .dependsOn(`common`)
 
@@ -43,7 +49,7 @@ lazy val `akka-grpc` =
       commonSettings,
       fork in run := true,
       javaAgents += "org.mortbay.jetty.alpn" % "jetty-alpn-agent" % "2.0.9" % "runtime;test",
-      javaOptions in run ++= heapOptions ++ jfrWithMemAndExceptions
+      javaOptions in run ++= heapOptions ++ logGC("akka-grpc") ++ jfrWithMemAndExceptions
     )
     .dependsOn(`common`)
 
